--- a/package.json
+++ b/package.json
@@ -33,3 +33,12 @@
     "vite": "^7.1.7"
   }
 }
+{
+  "routes": [
+    {
+      "src": "/[^.]+",
+      "dest": "/index.html",
+      "status": 200
+    }
+  ]
+}
